fix: Prevent the topbutton from overlapping the footer socials

--- a/src/styles/globals/_footer.css
+++ b/src/styles/globals/_footer.css
@@ -32,6 +32,7 @@
     --footer-socials-display: flex;
     --footer-socials-align-items: center;
     --footer-socials-justify-content: center;
+    --footer-socials-flex-flow: row wrap;
     --footer-socials-gap: var(--spacing-normal);
 
     --footer-social-link-size: var(--spacing-l);
@@ -41,6 +42,10 @@
     padding: var(--footer-padding);
     container-name: footer;
     container-type: inline-size;
+}
+
+.footer:has(~ .topbutton) {
+    --footer-padding: var(--spacing-xl) var(--spacing-normal) var(--spacing-xxxl) var(--spacing-normal);
 }
 
 .footer__logo {
@@ -120,5 +125,6 @@
     display: var(--footer-socials-display);
     align-items: var(--footer-socials-align-items);
     justify-content: var(--footer-socials-justify-content);
+    flex-flow: var(--footer-socials-flex-flow);
     gap: var(--footer-socials-gap);
 }
